@startuml ChatSystem

top to bottom direction

skinparam backgroundColor white
skinparam classBackgroundColor #EEF2FF
skinparam classBorderColor #4361EE
skinparam arrowColor #3A0CA3
skinparam roundcorner 20
skinparam shadowing false

abstract class BaseActivity

class ChatActivity {
  -performMatch(): void
  -sendMessage(): void
  -listenToMessages(): void
  +setHeaderState(): void
}

class ChatsListActivity {
  -loadChats(): void
}

enum HeaderState {
  DEFAULT
  MATCH
  TAKEN
  DELETED
}

ChatActivity --|> BaseActivity
ChatsListActivity --|> BaseActivity

ChatActivity --> HeaderState

@enduml